# icare_integration

./: .gitignore  README.md
client/: .eslintrc.json  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
client/react-dev-project/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1668409087669.mjs
client/react-dev-project/src/: main.tsx
client/react-dev-project/src/css/: icare.min.css  jq-ui.min.css
client/react-dev-project/src/fonts/: fontawesome.css  icare.css  index.css  jq-ui.css
client/src/: index.user.ts
client/src/components/: App.tsx  ContractDocumentsTab.tsx  DocumentsTabContent.tsx  FamilyDocumentSection.tsx  FileList.tsx  FilePreviewer.tsx  SplitExplorer.tsx  SplitResizer.tsx
client/src/helpers/: elements.ts  files.ts  icare.ts  url.ts
client/src/integrations/: contractIntegration.ts  contractPageIntegration.ts  familyIntegration.ts  integrations.ts  personIntegration.ts
client/src/types/: file.ts
server/: Cargo.toml  README.md
server/src/: cors.rs  env.rs.example  files.rs  main.rs
