[package]
name = "icare_integration_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket-multipart-form-data = "0.9.6"
rocket_contrib = {version="0.4.11", features = ["json"]}
serde = {version="1.0.147", features = ["derive"]}
serde_json = "1.0.89"
urlencoding = "2.1.2"
